--- a/index.html
+++ b/index.html
@@ -127,23 +127,17 @@ img{ border:0px;}
 <div class="ft-help">
     <div class="ft-help-list clearfix width982">
         <dl>
+        <dl>
           <dt>Beginner's guide</dt>
-          <dd><a href="#" target="_blank">shopping process</a></dd>
-          <dd><a href="#" target="_blank">Commodity inspection and receipt</a></dd>
+          <dd><a href="#" target="_blank">Reservation process</a></dd>
+         
           <dd><a href="#" target="_blank">Contact Customer Service</a></dd>
-          <dd><a href="#" target="_blank">Commodity purchase policy</a></dd>
+        
           <dd><a href="#" target="_blank">common problem</a></dd>
         </dl>
-        <dl>
-          <dt>Delivery service</dt>
-          <dd><a href="#" target="_blank">Delivery progress inquiry</a></dd>
-          <dd><a href="#" target="_blank">Distribution range and shipping</a></dd>
-          <dd><a href="#" target="_blank">On time</a></dd>
-          <dd><a href="#" target="_blank">Self-mentioned services</a></dd>
-        </dl>
+
         <dl>
           <dt>Payment method</dt>
-          <dd><a href="#" target="_blank">Cash on delivery</a></dd>
           <dd><a href="#" target="_blank">online payment</a></dd>
           <dd><a href="#" target="_blank">Bank Transfer</a></dd>
           <dd><a href="#" target="_blank">Use of coupons</a></dd>
@@ -151,10 +145,9 @@ img{ border:0px;}
         <dl>
           <dt>After-sales service</dt>
           <dd><a href="#" target="_blank">Use of coupons</a></dd>
-          <dd><a href="#" target="_blank">Return address</a></dd>
+          <dd><a href="#" target="_blank">Setting address</a></dd>
           <dd><a href="#" target="_blank">Refund instructions</a></dd>
-          <dd><a href="#" target="_blank">Brand after-sales service phone</a></dd>
-          <dd><a href="#" target="_blank">Extended warranty service</a></dd>
+
         </dl>
         <dl>
           <dt>Self-service</dt>
@@ -162,11 +155,9 @@ img{ border:0px;}
           <dd><a href="#" target="_blank">Return application</a></dd>
           <dd><a href="#" target="_blank">Online complaints</a></dd>
           <dd><a href="#" target="_blank">Make up invoice</a></dd>
-          <dd><a href="#" target="_blank">Bind the phone \ mailbox</a></dd>
-          <dd><a href="#" target="_blank">Gift card recharge</a></dd>
         </dl>
       </div>
-</div> 
+</div>
 <script src="js/ad.js" type="text/javascript"></script>
 
 <footer>
