--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@ img{ border:0px;}
 
 <header>
 	<div class="header-wrap clearfix">
-    	<h1 class="logo"><a href="index.html"><img src="images/logo.jpg" alt="" width="250", height="250"/></a></h1>
+    	<h1 class="logo"><a href="index.html"><img src="images/logo.jpg" alt="" width="100", height="100"/></a></h1>
         <img src="images/logo_text.jpg" alt="" class="text" height="50"/>
     </div>
 </header>
 <div class="width982 nav clearfix">
 	<ul>                                                                                                                        
     	<li class="on"><a href="index.html">Home</a></li>
-    	<li><a href="list.html">Sales area</a></li>
+    	<li><a href="list.html">Room main menu</a></li>
     	<li></li>
     	<li></li>
     	<li></li>
     	<li></li>
     	<li></li>
     	<li></li>
-    	<li><a href="login.html"><button>Log in</button></a></li>
+    	<li><a href="login.html">Log in</a></li>
     </ul><a href="#" class="buy-car"><img src="images/ico_car.jpg" /></a>
     
 </div>
@@ -99,23 +99,23 @@ img{ border:0px;}
     </h2>
     <div class="home-cont-sg clearfix">
     	<div>
-        	<img src="images/home-sg-img1.jpg" />
-	    	<img src="images/home-sg-img2.jpg" />
+        	<img src="images/home-sg-img1.jpg"  />
+	    	<img src="images/home-sg-img2.jpg"  />
         </div>
         <div class="big">
-        	<img src="images/home-sg-img3.jpg" />
+        	<img src="images/home-sg-img3.jpg"  />
         </div>
     	<div>
-    	<img src="images/home-sg-img4.jpg" />
-        	<img src="images/home-sg-img5.jpg" />
+    	<img src="images/home-sg-img4.jpg"   />
+        	<img src="images/home-sg-img5.jpg"  />
         </div>
         <div>
-    	<img src="images/home-sg-img6.jpg" />
-        	<img src="images/home-sg-img7.jpg" />
+    	<img src="images/home-sg-img6.jpg"  />
+        	<img src="images/home-sg-img7.jpg"   />
         </div>
     	<div>
-    		<img src="images/home-sg-img8.jpg" />
-    		<img src="images/home-sg-img9.jpg" />
+    		<img src="images/home-sg-img8.jpg"  />
+    		<img src="images/home-sg-img9.jpg"  />
         </div>
     	
     </div>
@@ -126,7 +126,6 @@ img{ border:0px;}
 </div>
 <div class="ft-help">
     <div class="ft-help-list clearfix width982">
-        <dl>
         <dl>
           <dt>Beginner's guide</dt>
           <dd><a href="#" target="_blank">Reservation process</a></dd>
@@ -157,7 +156,7 @@ img{ border:0px;}
           <dd><a href="#" target="_blank">Make up invoice</a></dd>
         </dl>
       </div>
-</div>
+</div> 
 <script src="js/ad.js" type="text/javascript"></script>
 
 <footer>
