--- a/index.html
+++ b/index.html
@@ -82,47 +82,18 @@ img{ border:0px;}
 </div>
 <div class="bg_gray">
 	<div class="home-cont width982">
-	<h2><img src="images/home-h2-1.jpg" /></h2>
+
     <div class="home-cont-lp clearfix">
-    	<img src="images/home-lp-img1.jpg" />
-    	<img src="images/home-lp-img2.jpg" />
-    	<img src="images/home-lp-img3.jpg" />
-    	<img src="images/home-lp-img4.jpg" />
-    	<img src="images/home-lp-img5.jpg" />
-    	<img src="images/home-lp-img6.jpg" />
-    	<img src="images/home-lp-img7.jpg" />
-    	<img src="images/home-lp-img8.jpg" />
+    	<img src="images/img1.jpg" width="990" height="630" />
+
+
+
     </div>
-	<h2>
-    	<img src="images/home-h2-2.jpg" />
-    	<span>Brand lit life, every day 10 points on the new</span>
-    </h2>
-    <div class="home-cont-sg clearfix">
-    	<div>
-        	<img src="images/home-sg-img1.jpg"  />
-	    	<img src="images/home-sg-img2.jpg"  />
-        </div>
-        <div class="big">
-        	<img src="images/home-sg-img3.jpg"  />
-        </div>
-    	<div>
-    	<img src="images/home-sg-img4.jpg"   />
-        	<img src="images/home-sg-img5.jpg"  />
-        </div>
-        <div>
-    	<img src="images/home-sg-img6.jpg"  />
-        	<img src="images/home-sg-img7.jpg"   />
-        </div>
-    	<div>
-    		<img src="images/home-sg-img8.jpg"  />
-    		<img src="images/home-sg-img9.jpg"  />
-        </div>
-    	
-    </div>
+
 </div>
 </div>
 <div class="ta_c home-cont-foot">
-	<img src="images/home-cont-foot.jpg" alt="" />
+
 </div>
 <div class="ft-help">
     <div class="ft-help-list clearfix width982">
