--- a/list.html
+++ b/list.html
@@ -17,21 +17,21 @@
 <body style="background:#fafafa;">
 <header>
 	<div class="header-wrap clearfix">
-    	<h1 class="logo"><a href="index.html"><img src="images/logo.jpg" alt="" width="250", height="250"/></a></h1>
+    	<h1 class="logo"><a href="index.html"><img src="images/logo.jpg" alt="" width="100", height="100"/></a></h1>
         <img src="images/logo_text.jpg" alt="" class="text" height="50"/>
     </div>
 </header>
 <div class="width982 nav clearfix">
 	<ul>                                                                                                                        
     	<li><a href="index.html">Home</a></li>
-    	<li class="on"><a href="list.html">Sales area</a></li>
+    	<li class="on"><a href="list.html">Room main menu</a></li>
     	<li></li>
     	<li></li>
     	<li></li>
     	<li></li>
     	<li></li>
     	<li></li>
-    	<li><a href="login.html"><button>Log in</button></a></li>
+    	<li><a href="login.html">Log in</a></li>
     </ul>
     <a href="#" class="buy-car"><img src="images/ico_car.jpg" /></a>
 </div>
@@ -40,153 +40,88 @@
     <p>Mobile Phone App Available</p>
 </div>
 <div class="width982 list-fenlei-class">
-	<h3>All Categories</h3>
-     <dl>
-    <dd><a href="#">Pear</a><a href="#">melon</a> <a href="#">lychee</a> <a href="#">orange</a> <a href="#">coconut</a> <a href="#">apple</a> <a href="#">banana</a> <a href="#">lemon</a> <a href="#">mango</a> <a href="#">pear</a> <a href="#">citrus</a> <a href="#">grapes</a> <a href="#">pineapple</a> <a href="#">rambutan</a> <a href="#">dragon fruit</a> <a href="#">kiwi</a> <a href="#">jujube</a> <a href="#">strawberry</a> <a href="#">cherry</a> <a href="#">Avocado</a> <a href="#">coconut</a> <a href="#">apricot</a> <a href="#">mangosteen</a> <a href="#">fruit</a> <a href="#">apple</a> <a href="#">plum</a> <a href="#">passion</a> <a href="#">durian</a> <a href="#">raspberry</a>
-        </dd>
+
     	<dt><img src="images/icon_fenlei1.jpg" /><strong>Global Hotel</strong></dt>
     </dl>
     <div class="shop-view-body clearfix">
     	<div class="box">
-        	<a href="list2.html"><img src="images/mei1.jpg" width="225" height="225" /></a>
-            <p><a href="list2.html">New Zealand Little Apple (large)</p>
-            <p><em>￥49.00/4个</em></p>
-            <button>Buy now</button>
+        	<a href="DoubleRoom1.html"><img src="images/mei1.jpg" width="225" height="225" /></a>
+            <p><a href="DoubleRoom1.html">Double room</p>
+            <p><em>$99.00</em></p>
+            <button>Browse for details</button>
         </div>
+		
     	<div class="box">
-       	  <img src="images/mei2.jpg" width="225" height="225" />
-            <p><a href="#">Yunnan specialty red sweet papaya</a></p>
-            <p><em>￥102/5个</em></p>
-            <button>Buy now</button>
+       	  <a href="DoubleRoom2.html"><img src="images/mei2.jpg" width="225" height="225" />
+            <p><a href="DoubleRoom2.html">Double room 2</a></p>
+            <p><em>$99.00 / day</em></p>
+            <button>Browse for details</button>
         </div>
+		
     	<div class="box">
-       	  <img src="images/mei3.jpg" width="225" height="225" />
-            <p><a href="#">Red heart dragon fruit</p>
-            <p><em>￥29.90/1个</em></p>
-            <button>Buy now</button>
+       	  <a href="DoubleRoom3.html"><img src="images/mei3.jpg" width="225" height="225" />
+            <p><a href="DoubleRoom3.html">Double room 3</p>
+            <p><em>$99.00 / day</em></p>
+            <button>Browse for details</button>
         </div>
+		
         <div class="box">
        	  <img src="images/mei4.jpg" width="225" height="225" />
-            <p><a href="#">Special small watermelon</a></p>
-            <p><em>￥29.90/1个</em></p>
-            <button>Buy now</button>
+            <p><a href="DoubleRoom4.html">Double room 4</a></p>
+            <p><em>$99.00 / day</em></p>
+            <button>Browse for details</button>
         </div>
     	<div class="box">
        	  <img src="images/mei5.jpg" width="225" height="225" />
-            <p><a href="#">Driscoll's Yunnan Raspberry</p>
-            <p><em>￥68.00/2盒</em></p>
-            <button>Buy now</button>
+            <p><a href="SingleRoom1">Single room</p>
+            <p><em>$99.00 / day</em></p>
+            <button>Browse for details</button>
         </div>
     	<div class="box">
-       	  <img src="images/mei6.jpg" width="225" height="225" />
-            <p><a href="#">Thai coconut green</a></p>
-            <p><em>￥29.90/2个</em></p>
-            <button>Buy now</button>
+       	  <img src="images/SingleRoom2.jpg" width="225" height="225" />
+            <p><a href="#">Single Room 2</a></p>
+            <p><em>$99.00 / day</em></p>
+            <button>Browse for details</button>
         </div>
         <div class="box">
-       	  <img src="images/mei7.jpg" width="225" height="225" />
-            <p><a href="#">Taiwan diamond tree on the red pineapple</a></p>
-            <p><em>￥49.00/1个</em></p>
-            <button>Buy now</button>
+       	  <img src="images/SingleRoom3.jpg" width="225" height="225" />
+            <p><a href="#">SingleRoom 3</a></p>
+            <p><em>$99.00 / day</em></p>
+            <button>Browse for details</button>
         </div>
         <div class="box">
-       	  <img src="images/mei8.jpg" width="225" height="225" />
-            <p><a href="#">Mexican avocado</a></p>
-            <p><em>￥49.90/3个</em></p>
-            <button>Buy now</button>
+       	  <img src="images/SingleRoom4.jpg" width="225" height="225" />
+            <p><a href="#">SingleRoom 4 </a></p>
+            <p><em>$99.00 / day</em></p>
+            <button>Browse for details</button>
         </div>
     </div>
 
-  <dl>
-   	<dt><img src="images/icon_fenlei3.jpg" />Hotel gift box</dt>
-  </dl>
-    <div class="shop-view-body clearfix">
-    	<div class="box">
-       	  <img src="images/mei9.jpg" width="225" height="225" />
-            <p><a href="#">Orange full of dumplings gift box</a></p>
-            <p><em>¥ 59.00 / 6 months</em></p>
-            <button>Buy now</button>
-        </div>
-    	<div class="box">
-       	  <img src="images/mei10.jpg" width="225" height="225" />
-            <p><a href="#">Dumplings of a summer gift box B</a></p>
-            <p><em>¥ 238.00 / gift box</em></p>
-            <button>Buy now</button>
-        </div>
-    	<div class="box">
-       	  <img src="images/mei11.jpg" width="225" height="225" />
-            <p><a href="#">Dragon Boat Festival Gift Box B
-</a></p>
-            <p><em>¥ 358.00 / gift box</em></p>
-            <button>Buy now</button>
-        </div>
-        <div class="box">
-       	  <img src="images/mei12.jpg" width="225" height="225" />
-            <p><a href="#">Sincere gift box</a></p>
-            <p><em>¥ 178.00 / 1 box</em></p>
-            <button>Buy now</button>
-        </div>
-    	<div class="box">
-       	  <img src="images/mei13.jpg" width="225" height="225" />
-            <p><a href="#">Love fruit gift basket</a></p>
-            <p><em>¥ 238.00 / gift basket</em></p>
-            <button>Buy now</button>
-        </div>
-    	<div class="box">
-       	  <img src="images/mei14.jpg" width="225" height="225" />
-            <p><a href="#">Really wish fruit gift baskets</a></p>
-            <p><em>¥ 358.00 / gift baskets</em></p>
-            <button>Buy now</button>
-        </div>
-        <div class="box">
-       	  <img src="images/mei15.jpg" width="225" height="225" />
-            <p><a href="#">The Wizard of Oz</a></p>
-            <p><em>¥ 580.00 / gift baskets</em></p>
-            <button>Buy now</button>
-        </div>
-        <div class="box">
-       	  <img src="images/mei16.jpg" width="225" height="225" />
-            <p><a href="#">Affectionate fruit gift baskets</a></p>
-            <p><em>¥ 580.00 / box</em></p>
-            <button>Buy now</button>
-        </div>
-    </div>
-</div>
 
 <div class="width982 list-shop-view">
   <div class="page">
-   	  <a href="#" class="on">1</a>
+   	  <a href="list.html" class="on">1</a>
    	  <a href="#">2</a>
    	  <a href="#">3</a>
-   	  <a href="#">4</a>
-   	  <a href="#">5</a>
-   	  <a href="#">6</a>
-   	  <a href="#">7</a>
       <span>...</span>
-   	  <a href="#">21</a>
-   	  <a href="#">22</a>
+   	  <a href="#">6</a>
+
+
     </div>
 </div>
 <div class="ft-help">
     <div class="ft-help-list clearfix width982">
         <dl>
           <dt>Beginner's guide</dt>
-          <dd><a href="#" target="_blank">shopping process</a></dd>
-          <dd><a href="#" target="_blank">Commodity inspection and receipt</a></dd>
+          <dd><a href="#" target="_blank">Reservation process</a></dd>
+         
           <dd><a href="#" target="_blank">Contact Customer Service</a></dd>
-          <dd><a href="#" target="_blank">Commodity purchase policy</a></dd>
+        
           <dd><a href="#" target="_blank">common problem</a></dd>
         </dl>
-        <dl>
-          <dt>Delivery service</dt>
-          <dd><a href="#" target="_blank">Delivery progress inquiry</a></dd>
-          <dd><a href="#" target="_blank">Distribution range and shipping</a></dd>
-          <dd><a href="#" target="_blank">On time</a></dd>
-          <dd><a href="#" target="_blank">Self-mentioned services</a></dd>
-        </dl>
+
         <dl>
           <dt>Payment method</dt>
-          <dd><a href="#" target="_blank">Cash on delivery</a></dd>
           <dd><a href="#" target="_blank">online payment</a></dd>
           <dd><a href="#" target="_blank">Bank Transfer</a></dd>
           <dd><a href="#" target="_blank">Use of coupons</a></dd>
@@ -194,10 +129,9 @@
         <dl>
           <dt>After-sales service</dt>
           <dd><a href="#" target="_blank">Use of coupons</a></dd>
-          <dd><a href="#" target="_blank">Return address</a></dd>
+          <dd><a href="#" target="_blank">Setting address</a></dd>
           <dd><a href="#" target="_blank">Refund instructions</a></dd>
-          <dd><a href="#" target="_blank">Brand after-sales service phone</a></dd>
-          <dd><a href="#" target="_blank">Extended warranty service</a></dd>
+
         </dl>
         <dl>
           <dt>Self-service</dt>
@@ -205,10 +139,10 @@
           <dd><a href="#" target="_blank">Return application</a></dd>
           <dd><a href="#" target="_blank">Online complaints</a></dd>
           <dd><a href="#" target="_blank">Make up invoice</a></dd>
-          <dd><a href="#" target="_blank">Bind the phone \ mailbox</a></dd>
-          <dd><a href="#" target="_blank">Gift card recharge</a></dd>
+
         </dl>
       </div>
+</div>
 </div>
 <footer>
 	<p class="mt_20"><a href="#"> About Us </a> | <a> Our Team </a> | <a> Affiliates </a> | <a> Top Searches </a> | <a> Friendship Link </a> | <a> our community </a> | <a> kinship english </a> | <a> merchant Log in </a> | <a> Vendor Log in </a> | <a> assured search </a> | <a> our new product </a> | <a> open platform </a></p>
