--- a/SingleRoom4.html
+++ b/SingleRoom4.html
@@ -45,7 +45,7 @@
   <dl>
   <blockquote>
   <div class="left">
-  <img src="images/Room3-1.jpg" width="550" />
+  <img src="images/SingleRoom4.jpg" width="550" />
   </div>
   <div class="right">
   <h2>Double room  </h2>
