--- a/SingleRoom2.html
+++ b/SingleRoom2.html
@@ -45,7 +45,7 @@
   <dl>
   <blockquote>
   <div class="left">
-  <img src="images/Room3-1.jpg" width="550" />
+<img src="images/SingleRoom2.jpg" width="550" />
   </div>
   <div class="right">
   <h2>Double room  </h2>
@@ -58,7 +58,7 @@
   </div>
   <div class="clearfix"></div>
   <p  class="jieshao">   Standard single room with all kinds of equipment for one person to live comfortably</p>
-  <p class="tu"><img src="images/room3.jpg" /></p>
+
   
   
 
