--- a/list.html
+++ b/list.html
@@ -72,26 +72,26 @@
             <button>Browse for details</button>
         </div>
     	<div class="box">
-       	  <img src="images/mei5.jpg" width="225" height="225" />
-            <p><a href="SingleRoom1">Single room</p>
+       	  <img src="images/SingleRoom1.jpg" width="225" height="225" />
+            <p><a href="SingleRoom1.html">Single room</p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
     	<div class="box">
        	  <img src="images/SingleRoom2.jpg" width="225" height="225" />
-            <p><a href="#">Single Room 2</a></p>
+            <p><a href="SingleRoom2.html">Single Room 2</a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
         <div class="box">
        	  <img src="images/SingleRoom3.jpg" width="225" height="225" />
-            <p><a href="#">SingleRoom 3</a></p>
+            <p><a href="SingleRoom3.html">SingleRoom 3</a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
         <div class="box">
        	  <img src="images/SingleRoom4.jpg" width="225" height="225" />
-            <p><a href="#">SingleRoom 4 </a></p>
+            <p><a href="SingleRoom4.html">SingleRoom 4 </a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
