--- a/list.html
+++ b/list.html
@@ -67,31 +67,31 @@
 		
         <div class="box">
        	  <img src="images/mei4.jpg" width="225" height="225" />
-            <p><a href="DoubleRoom4.html">Double room 4</a></p>
+            <a href="DoubleRoom4.html"><p><a href="DoubleRoom4.html">Double room 4</a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
     	<div class="box">
-       	  <img src="images/SingleRoom1.jpg" width="225" height="225" />
+       	  <a href="SingleRoom1.html"><img src="images/mei5.jpg" width="225" height="225" />
             <p><a href="SingleRoom1.html">Single room</p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
     	<div class="box">
-       	  <img src="images/SingleRoom2.jpg" width="225" height="225" />
+       	  <a href="SingleRoom2.html"><img src="images/SingleRoom2.jpg" width="225" height="225" />
             <p><a href="SingleRoom2.html">Single Room 2</a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
         <div class="box">
-       	  <img src="images/SingleRoom3.jpg" width="225" height="225" />
-            <p><a href="SingleRoom3.html">SingleRoom 3</a></p>
+       	  <a href="SingleRoom3.html"><img src="images/SingleRoom3.jpg" width="225" height="225" />
+            <p><a href="SingleRoom3.html">Single Room 3</a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
         <div class="box">
-       	  <img src="images/SingleRoom4.jpg" width="225" height="225" />
-            <p><a href="SingleRoom4.html">SingleRoom 4 </a></p>
+       	  <a href="SingleRoom4.html"><img src="images/SingleRoom4.jpg" width="225" height="225" />
+            <p><a href="SingleRoom4.html">Single Room 4 </a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
         </div>
