--- a/DoubleRoom4.html
+++ b/DoubleRoom4.html
@@ -45,7 +45,7 @@
   <dl>
   <blockquote>
   <div class="left">
-  <img src="images/Room3-1.jpg" width="550" />
+  <img src="images/DoubleRoom4.jpg" width="550" />
   </div>
   <div class="right">
   <h2>Double room  </h2>
@@ -58,7 +58,7 @@
   </div>
   <div class="clearfix"></div>
   <p  class="jieshao"> Standard size double room - suitable for two people with the most basic accommodation facilities, including: bathroom, wardrobe, desk, refrigerator, free WIFI, panoramic skylight, double bed, give you the best stay experience.</p>
-  <p class="tu"><img src="images/room3.jpg" /></p>
+
   
   
 
