--- a/list.html
+++ b/list.html
@@ -66,7 +66,7 @@
         </div>
 		
         <div class="box">
-       	  <img src="images/DoubleRoom4.jpg" width="225" height="225" />
+       	  <a href="DoubleRoom4.html"><img src="images/DoubleRoom4.jpg" width="225" height="225" />
             <a href="DoubleRoom4.html"><p><a href="DoubleRoom4.html">Double room 4</a></p>
             <p><em>$99.00 / day</em></p>
             <button>Browse for details</button>
