--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ img{ border:0px;}
 
 <header>
 	<div class="header-wrap clearfix">
-    	
+    	<h1 class="logo"><a href="index.html"><img src="images/logo.jpg" alt="" width="100", height="100"/></a></h1>
         <img src="images/logo_text.jpg" alt="" class="text" height="50"/>
     </div>
 </header>
@@ -46,7 +46,7 @@ img{ border:0px;}
     	<li></li>
     	<li></li>
     	<li><a href="login.html">Log in</a></li>
-    </ul><a href="#" class="buy-car"><img src="images/ico_car.jpg" /></a>
+ 
     
 </div>
 <div id="banner" class="">
